# mechanoChemIGA

./: .gitignore  Dockerfile  Doxyfile  DoxygenWarningLog.txt  LICENSE  LICENSE_PetIGA  README  README.md  chemoMechanics.c  derivatives.h  fields.h  makefile  mechanoChemo3D.c  mechanoChemoND.c  mechanoChemoND3D.c  nonConvexMechanicsND.c  petigaksp2.h  strainGradient3D.c  submitJobs.py  test  writeU2D.py  writeU3D.py  writeUC2D.py
D33/: pbsJob
doxygen/: #example4.h#  Doxyfile  DoxygenLayout.xml  DoxygenWarningLog.txt  codeStructure.h  example1.h  example2.h  example3.h  example4.h  example5.h  example6.h  example7.h  example8.h  examples.h
flux/: fluxCopy  makeflux
html/: _i_b_v_p_headers_8h.html  _i_b_v_p_headers_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  app_ctx_8h.html  app_ctx_8h_source.html  classes.html  configurational_forces_2bending2_d_2boundary_conditions_8cc.html  configurational_forces_2bending2_d_2define_parameters_8cc.html  configurational_forces_2bending2_d_2initial_conditions_8cc.html  configurational_forces_2bending2_d_2load_time_step_8cc.html  configurational_forces_2bending2_d_2main_8cc.html  configurational_forces_2bending2_d_2setup_8cc.html  configurational_forces_2bending3_d_2boundary_conditions_8cc.html  configurational_forces_2bending3_d_2define_parameters_8cc.html  configurational_forces_2bending3_d_2initial_conditions_8cc.html  configurational_forces_2bending3_d_2load_time_step_8cc.html  configurational_forces_2bending3_d_2main_8cc.html  configurational_forces_2bending3_d_2setup_8cc.html  configurational_forces_2constitutive_8h.html  configurational_forces_2constitutive_8h_source.html  configurational_forces_2e1_anisotropy_2boundary_conditions_8cc.html  configurational_forces_2e1_anisotropy_2define_parameters_8cc.html  configurational_forces_2e1_anisotropy_2initial_conditions_8cc.html  configurational_forces_2e1_anisotropy_2load_time_step_8cc.html  configurational_forces_2e1_anisotropy_2main_8cc.html  configurational_forces_2e1_anisotropy_2setup_8cc.html  configurational_forces_2e2_anisotropy_2boundary_conditions_8cc.html  configurational_forces_2e2_anisotropy_2define_parameters_8cc.html  configurational_forces_2e2_anisotropy_2initial_conditions_8cc.html  configurational_forces_2e2_anisotropy_2load_time_step_8cc.html  configurational_forces_2e2_anisotropy_2main_8cc.html  configurational_forces_2model_8cc.html  (+116 more)
initBounValProbs/nonGradientMechanics/3D/: CMakeLists.txt  main.cc  parameters.prm  userFunctions.cc
(+878 files in other folders)
